packages/tree-sitter-ccl/test/corpus/basic_parsing.txt
====
Basic key-value pair
====

key = value

---

(document
  (entry 
    (single_line_key) 
    (assignment) 
    (single_line_value)
    (newline)))

====
Single line with newline only
====

key = value

---

(document
  (entry 
    (single_line_key) 
    (assignment) 
    (single_line_value)
    (newline)))

====
Multiple entries
====

first = value1
second = value2

---

(document
  (entry 
    (single_line_key) 
    (assignment) 
    (single_line_value)
    (newline))
  (entry
    (single_line_key)
    (assignment)
    (single_line_value)
    (newline)))

====
Empty line handling
====

key1 = value1

key2 = value2

---

(document
  (entry 
    (single_line_key) 
    (assignment) 
    (single_line_value)
    (newline))
  (newline)
  (entry
    (single_line_key)
    (assignment)
    (single_line_value)
    (newline)))
